# TetrisOpenGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TetrisOpenGL.sln  clean.ps1  copy.ps1  format.ps1  formatFiles.sh  makefile
.github/workflows/: cpp.yml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/include/: Color.h  EngineEnums.h  Entity.h  Game.h  Game.hpp  GuiManager.h  GuiManager.hpp  Vector2.h  Vector2.hpp
Engine/include/Engine/: Array.hpp  Color.hpp  Entity.hpp  Game.hpp  GuiManager.hpp  Stack.hpp  Vector2.hpp
Engine/src/: Color.cpp  Entity.cpp  Game.cpp  GuiManager.cpp  Vector2.cpp
GIMP/: icon.xcf  img.xcf
TetrisOpenGL/: BoardManager.h  CMakeLists.txt  Cube.cpp  Cube.h  Entity.cpp  Entity.h  Enums.h  KeyboardManager.cpp  Main.cpp  TetriminoCreator.cpp  TetriminoCreator.h  TetriminoCube.cpp  TetriminoCube.h  TetriminoCubeGroup.cpp  TetriminoCubeGroup.h  Tetris.cpp  Tetris.h  TetrisOpenGL.vcxproj  TetrisOpenGL.vcxproj.filters
TetrisOpenGL/include/: BoardManager.h  ConnectedTetriminoCubes.h  Cube.h  Cube.hpp  Entity.h  Enums.h  HelperDefinitions.h  ImGuiWrapper.h  ImageCoordManager.h  JsonWrapper.h  KeyboardManager.h  TetriminoCreator.h  TetriminoCube.h  TetriminoCube.hpp  TetriminoCubeGroup.h  Tetris.h  Tetris.hpp
TetrisOpenGL/include/Tetris/: Cube.hpp  HelperDefinitions.hpp  JsonWrapper.hpp  Settings.hpp  TetriminoCreator.hpp  TetriminoCube.hpp  TetriminoCubeGroup.hpp  Tetris.hpp  TetrisEnums.hpp
TetrisOpenGL/src/: BoardManager.cpp  ConnectedTetriminoCubes.cpp  Cube.cpp  Entity.cpp  ImGuiWrapper.cpp  ImageCoordManager.cpp  JsonWrapper.cpp  Settings.cpp  TetriminoCreator.cpp  TetriminoCube.cpp  TetriminoCubeGroup.cpp  Tetris.cpp
